--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ks": "^2.0.4",
     "open-simplex-noise": "^2.3.1",
     "pngjs": "^5.0.0",
+    "ramda": "0.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
