--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/imbateam-gg/bw-lab#readme",
   "dependencies": {
     "bw-chk": "file:../bw-chk",
+    "concat": "1.0.3",
     "dat.gui": "0.7.7",
     "electron": "^9.0.4",
     "electron-is-dev": "^1.2.0",
