--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "3D Map & Replay View for Starcraft Broodwar",
   "main": "electron/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watchAll",
+    "test:debug": "node --inspect node_modules/.bin/jest --runInBand",
     "clear-cache": "rm -rf .cache dist",
     "electron": "electron .",
     "dev": "electron-webpack dev"
@@ -40,11 +41,9 @@
     "d3-ease": "1.0.6",
     "dat.gui": "0.7.7",
     "electron-is-dev": "^1.2.0",
-    "howler": "2.2.0",
     "iconv-lite": "0.6.1",
     "jssuh": "1.4.0",
     "ks": "^2.0.4",
-    "open-simplex-noise": "^2.3.1",
     "pngjs": "^5.0.0",
     "ramda": "0.27.0",
     "react": "^16.13.1",
@@ -56,9 +55,14 @@
     "typescript": "^3.9.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.1",
+    "babel-jest": "^26.1.0",
+    "dotenv": "^8.2.0",
     "electron": "^9.0.5",
     "electron-webpack": "^2.8.2",
+    "jest": "^26.1.0",
     "parcel-plugin-static-files-copy": "^2.4.3",
     "source-map-support": "^0.5.19",
     "webpack": "^4.43.0",
