--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "electron/index.js",
   "scripts": {
     "test": "jest --watchAll",
+    "test:once": "jest",
     "test:debug": "node --inspect node_modules/.bin/jest --runInBand",
     "clear-cache": "rm -rf .cache dist",
     "electron": "electron .",
