--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     }
   },
   "dependencies": {
+    "buffer": "^5.6.0",
     "bw-chk": "file:../bw-chk",
     "concat": "1.0.3",
     "d3-ease": "1.0.6",
