--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.0",
+    "sanitize-filename": "^1.6.3",
     "scm-extractor": "^1.0.6",
     "stats.js": "0.17.0",
     "three": "^0.120.1",
