--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     }
   },
   "dependencies": {
+    "bl": "^4.0.3",
     "buffer": "^5.6.0",
     "bw-chk": "file:../bw-chk",
     "concat": "1.0.3",
@@ -44,6 +45,7 @@
     "dat.gui": "0.7.7",
     "electron-is-dev": "^1.2.0",
     "iconv-lite": "0.6.1",
+    "iscript": "^1.0.1",
     "jssuh": "1.4.0",
     "ks": "^2.0.4",
     "pngjs": "^5.0.0",
