--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     }
   },
   "dependencies": {
-    "binpackingjs": "^2.3.2",
+    "@eliasku/binpack": "^1.0.1",
     "bl": "^4.0.3",
     "buffer": "^5.6.0",
     "bw-chk": "file:../bw-chk",
