--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-tooltip": "^4.2.10",
     "sanitize-filename": "^1.6.3",
     "scm-extractor": "^1.0.6",
+    "sparkly": "^5.0.0",
     "three": "^0.120.1",
     "typescript": "^3.9.7"
   },
