--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "concat": "1.0.3",
     "d3-ease": "1.0.6",
     "dat.gui": "0.7.7",
+    "downgrade-replay": "file:../downgrade-replay",
     "electron-is-dev": "^1.2.0",
     "iconv-lite": "0.6.1",
     "iscript": "^1.0.2",
@@ -61,8 +62,7 @@
     "scm-extractor": "^1.0.6",
     "sparkly": "^5.0.0",
     "three": "^0.120.1",
-    "typescript": "^3.9.7",
-    "downgrade-replay": "file:../downgrade-replay"
+    "typescript": "^3.9.7"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
