--- a/package.json
+++ b/package.json
@@ -71,10 +71,12 @@
     "react-color": "^2.19.3",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.0",
+    "react-pie-menu": "^0.2.5",
     "react-tooltip": "^4.2.10",
     "sanitize-filename": "^1.6.3",
     "scm-extractor": "^1.0.6",
     "sparkly": "^5.0.0",
+    "styled-components": "^5.2.1",
     "superagent": "^6.1.0",
     "three": "^0.120.1",
     "typescript": "^4.0.3",
