--- a/package.json
+++ b/package.json
@@ -40,12 +40,10 @@
     }
   },
   "build": {
-    "extraResources": [
-      {
-        "from": "data",
-        "to": "data"
-      }
-    ]
+    "extraResources": [{
+      "from": "data",
+      "to": "data"
+    }]
   },
   "dependencies": {
     "@eliasku/binpack": "^1.0.1",
@@ -73,6 +71,7 @@
     "react-dropzone": "^11.2.0",
     "react-pie-menu": "^0.2.5",
     "react-tooltip": "^4.2.10",
+    "rss-parser": "^3.9.0",
     "sanitize-filename": "^1.6.3",
     "scm-extractor": "^1.0.6",
     "sparkly": "^5.0.0",
