--- a/package.json
+++ b/package.json
@@ -95,6 +95,12 @@
     "electron": "^10.1.2",
     "electron-builder": "^22.8.1",
     "electron-webpack": "^2.8.2",
+    "eslint": "^7.16.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.4.2",
     "parcel-plugin-static-files-copy": "^2.5.0",
     "source-map-support": "^0.5.19",
