--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.0",
     "react-pie-menu": "^0.2.5",
+    "react-redux": "6.0.0",
     "react-tooltip": "^4.2.10",
     "rss-parser": "^3.9.0",
     "sanitize-filename": "^1.6.3",
@@ -95,6 +96,7 @@
     "dotenv": "^8.2.0",
     "electron": "^10.1.2",
     "electron-builder": "^22.8.1",
+    "electron-devtools-installer": "^3.1.1",
     "electron-webpack": "^2.8.2",
     "eslint": "^7.16.0",
     "eslint-config-airbnb": "^18.2.1",
