--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -51,9 +51,10 @@
     "@eliasku/binpack": "^1.0.1",
     "@reduxjs/toolkit": "^1.5.0",
     "bl": "^4.0.3",
-    "bw-chk-modified": "1.2.1",
     "buffer": "^5.6.0",
+    "bw-chk-modified": "1.2.1",
     "camera-controls": "^1.25.3",
+    "casclib": "^1.0.4",
     "concat": "1.0.3",
     "d3-ease": "1.0.6",
     "dat.gui": "0.7.7",
@@ -64,7 +65,6 @@
     "hold-event": "^0.0.1",
     "iconv-lite": "0.6.1",
     "iscript": "^1.0.2",
-    "titan-reactor-shared": "^1.0.0",
     "jssuh": "1.4.0",
     "npm": "^6.14.8",
     "pngjs": "^5.0.0",
@@ -86,6 +86,7 @@
     "styled-components": "^5.2.1",
     "superagent": "^6.1.0",
     "three": "^0.121.1",
+    "titan-reactor-shared": "^1.0.0",
     "typescript": "^4.0.3",
     "webpack": "4.42.1",
     "winreg": "^1.2.4"
