--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -3,7 +3,7 @@
   "productName": "Titan Reactor",
   "version": "0.1.0",
   "description": "3D Map & Replay View for Starcraft Broodwar",
-  "main": "electron/index.js",
+  "main": "src/main/index.js",
   "scripts": {
     "test": "jest --watchAll",
     "test:once": "jest --runInBand",
@@ -88,7 +88,8 @@
     "titan-reactor-shared": "^1.0.0",
     "typescript": "^4.0.3",
     "webpack": "4.42.1",
-    "winreg": "^1.2.4"
+    "winreg": "^1.2.4",
+    "ws": "^7.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
