--- a/packages/iscriptah/package.json
+++ b/packages/iscriptah/package.json
@@ -40,7 +40,6 @@
     "dotenv": "8.2.0",
     "electron-devtools-installer": "^3.1.1",
     "electron-is-dev": "1.2.0",
-    "titan-reactor-shared": "^1.0.0",
     "iscript": "^1.0.2",
     "pattern.css": "^1.0.0",
     "ramda": "^0.27.1",
@@ -52,7 +51,8 @@
     "redux-actions": "^2.6.5",
     "source-map-support": "^0.5.16",
     "tailwindcss": "^1.9.2",
-    "three": "^0.121.1"
+    "three": "0.125.2",
+    "titan-reactor-shared": "^1.0.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.12.1",
