--- a/packages/titan-reactor-shared/package.json
+++ b/packages/titan-reactor-shared/package.json
@@ -9,10 +9,10 @@
   "author": "Alex Pineda <alexpineda@fastmail.com>",
   "license": "MIT",
   "dependencies": {
-    "casclib": "^1.0.4",
     "bw-chk-modified": "1.2.1",
+    "casclib": "^1.0.4",
+    "postprocessing": "^6.19.3",
     "ramda": "^0.27.1",
-    "three": "^0.121.1",
-    "postprocessing": "^6.19.3"
+    "three": "0.125.2"
   }
 }
