--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -57,7 +57,6 @@
     "concat": "1.0.3",
     "d3-ease": "1.0.6",
     "dat.gui": "0.7.7",
-    "deep-equal": "^2.0.4",
     "downgrade-replay": "^1.0.0",
     "electron-is-dev": "^1.2.0",
     "esm": "^3.2.25",
@@ -88,8 +87,7 @@
     "titan-reactor-shared": "^1.0.0",
     "typescript": "^4.0.3",
     "webpack": "4.42.1",
-    "winreg": "^1.2.4",
-    "ws": "^7.4.3"
+    "winreg": "^1.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
