--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -64,6 +64,7 @@
     "iconv-lite": "0.6.1",
     "iscript": "^1.0.2",
     "jssuh": "1.4.0",
+    "lodash.debounce": "^4.0.8",
     "lodash.shuffle": "^4.2.0",
     "npm": "^6.14.8",
     "pngjs": "^5.0.0",
