--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -70,14 +70,13 @@
     "pngjs": "^5.0.0",
     "postprocessing": "^6.19.3",
     "ramda": "0.27.0",
-    "react": "^16.13.1",
+    "react": "17.0.1",
     "react-autosuggest": "^10.0.4",
     "react-circle": "^1.1.1",
     "react-color": "^2.19.3",
-    "react-dom": "^16.13.1",
+    "react-dom": "17.0.1",
     "react-dropzone": "^11.2.0",
     "react-pie-menu": "^0.2.5",
-    "react-redux": "6.0.0",
     "rss-parser": "^3.9.0",
     "sanitize-filename": "^1.6.3",
     "scm-extractor": "^1.0.6",
@@ -88,7 +87,8 @@
     "titan-reactor-shared": "^1.0.0",
     "typescript": "^4.0.3",
     "webpack": "4.42.1",
-    "winreg": "^1.2.4"
+    "winreg": "^1.2.4",
+    "zustand": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
