--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -110,6 +110,8 @@
     "jest": "^26.4.2",
     "parcel-plugin-static-files-copy": "^2.5.0",
     "source-map-support": "^0.5.19",
+    "styled-components": "^5.2.1",
+    "tailwind-styled-components": "^1.0.7",
     "worker-loader": "^2.0.0"
   }
 }
