--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -83,6 +83,7 @@
     "sparkly": "^5.0.0",
     "styled-components": "^5.2.1",
     "superagent": "^6.1.0",
+    "superquad": "^1.2.2",
     "three": "0.125.2",
     "titan-reactor-shared": "^1.0.0",
     "typescript": "^4.0.3",
