--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -77,6 +77,7 @@
     "react-dom": "17.0.1",
     "react-dropzone": "^11.2.0",
     "react-pie-menu": "^0.2.5",
+    "react-tooltip": "^4.2.17",
     "rss-parser": "^3.9.0",
     "sanitize-filename": "^1.6.3",
     "scm-extractor": "^1.0.6",
