--- a/packages/downgrade-replay/package.json
+++ b/packages/downgrade-replay/package.json
@@ -6,13 +6,13 @@
   "author": "Alex Pineda <alexpineda@fastmail.com",
   "license": "MIT",
   "dependencies": {
-    "bl": "^4.0.3",
+    "bl": "^5.0.0",
     "concat-stream": "^2.0.0",
+    "downgrade-chk": "^1.0.0",
     "iconv-lite": "^0.6.2",
     "jssuh": "^1.4.0",
-    "ramda": "^0.27.1",
-    "scm-extractor": "^1.0.6",
     "pkware-wasm": "^1.0.0",
-    "downgrade-chk": "^1.0.0"
+    "ramda": "^0.27.1",
+    "scm-extractor": "^1.0.6"
   }
 }
