--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -53,8 +53,8 @@
     ]
   },
   "dependencies": {
-    "bl": "^4.0.3",
-    "buffer": "^5.6.0",
+    "bl": "^5.0.0",
+    "buffer": "^6.0.3",
     "bw-chk-modified": "1.2.1",
     "camera-controls": "^1.25.3",
     "casclib": "^2.0.1",
@@ -64,24 +64,24 @@
     "downgrade-replay": "^1.0.0",
     "electron-devtools-installer": "^3.2.0",
     "electron-is-dev": "^1.2.0",
-    "hold-event": "^0.0.1",
-    "iconv-lite": "0.6.1",
+    "hold-event": "^0.1.0",
+    "iconv-lite": "0.6.3",
     "iscript": "^1.0.2",
-    "jssuh": "1.4.0",
+    "jssuh": "1.4.1",
     "lodash.debounce": "^4.0.8",
     "lodash.shuffle": "^4.2.0",
-    "pngjs": "^5.0.0",
-    "postprocessing": "^6.19.3",
-    "ramda": "0.27.0",
-    "react": "17.0.1",
+    "pngjs": "^6.0.0",
+    "postprocessing": "^6.23.1",
+    "ramda": "0.27.1",
+    "react": "17.0.2",
     "react-autosuggest": "^10.0.4",
     "react-color": "^2.19.3",
-    "react-dom": "17.0.1",
+    "react-dom": "17.0.2",
     "react-dropzone": "^11.2.0",
     "react-tooltip": "^4.2.17",
     "sanitize-filename": "^1.6.3",
     "scm-extractor": "^1.0.6",
-    "three": "0.125.2",
+    "three": "0.133.1",
     "webpack": "4.42.1",
     "winreg": "^1.2.4",
     "zustand": "^3.3.3"
@@ -92,6 +92,7 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "babel-jest": "^26.3.0",
+    "babel-loader": "^8.2.2",
     "dotenv": "^8.2.0",
     "electron": "^15.0.0",
     "electron-builder": "^22.8.1",
@@ -102,7 +103,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^26.4.2",
+    "jest": "^27.2.4",
     "parcel-plugin-static-files-copy": "^2.5.0",
     "source-map-support": "^0.5.19",
     "worker-loader": "^2.0.0"
