move to preact. refactor map loading

--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -72,13 +72,8 @@
     "lodash.shuffle": "^4.2.0",
     "pngjs": "^6.0.0",
     "postprocessing": "^6.23.1",
+    "preact": "^10.5.15",
     "ramda": "0.27.1",
-    "react": "17.0.2",
-    "react-autosuggest": "^10.0.4",
-    "react-color": "^2.19.3",
-    "react-dom": "17.0.2",
-    "react-dropzone": "^11.2.0",
-    "react-tooltip": "^4.2.17",
     "sanitize-filename": "^1.6.3",
     "scm-extractor": "^1.0.6",
     "three": "0.133.1",
@@ -90,11 +85,12 @@
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-react": "^7.14.5",
+    "@welldone-software/why-did-you-render": "^6.2.1",
     "babel-jest": "^26.3.0",
     "babel-loader": "^8.2.2",
     "dotenv": "^8.2.0",
-    "electron": "^15.0.0",
+    "electron": "15.1.1",
     "electron-builder": "^22.8.1",
     "electron-webpack": "^2.8.2",
     "eslint": "^7.16.0",
