integrate iscript parser. remove more dependencies! #196

--- a/packages/titan-reactor/jsconfig.json
+++ b/packages/titan-reactor/jsconfig.json
@@ -1,9 +1,13 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es2020",
-    "jsx": "preserve",
+    "module": "esnext",
+    "target": "esnext",
+    "moduleResolution": "node",
+
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact/compat",
+
     "strictFunctionTypes": true
   },
-  "exclude": ["node_modules", "**/node_modules/*"]
+  "include": ["src/**/*"]
 }
