--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -86,6 +86,7 @@
     "@babel/preset-typescript": "^7.15.0",
     "@types/bl": "^5.0.2",
     "@types/concat-stream": "^1.6.1",
+    "@types/d3-ease": "^3.0.0",
     "@types/lodash.shuffle": "^4.2.6",
     "@types/three": "^0.133.1",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
