--- a/packages/downgrade-replay/package.json
+++ b/packages/downgrade-replay/package.json
@@ -14,5 +14,8 @@
     "pkware-wasm": "^1.0.0",
     "ramda": "^0.27.1",
     "scm-extractor": "^1.0.6"
+  },
+  "devDependencies": {
+    "jest": "^27.3.1"
   }
 }
