--- a/packages/titan-reactor/tsconfig.json
+++ b/packages/titan-reactor/tsconfig.json
@@ -12,6 +12,7 @@
     "experimentalDecorators": true,
     "jsx": "react-jsx",
     "jsxImportSource": "preact",
+    "noImplicitAny": true,
 
     "checkJs": false,
     "preserveConstEnums": true,
