--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -46,15 +46,16 @@
     "mac": {
       "category": "3D Map & Replay Viewer for Starcraft Broodwar"
     },
-    "extraResources": [{
-      "from": "static",
-      "to": "static"
-    }]
+    "extraResources": [
+      {
+        "from": "static",
+        "to": "static"
+      }
+    ]
   },
   "dependencies": {
     "bl": "^5.0.0",
     "buffer": "^6.0.3",
-    "bw-chk-modified": "1.2.1",
     "camera-controls": "^1.25.3",
     "casclib": "^2.0.1",
     "concat": "1.0.3",
@@ -65,6 +66,7 @@
     "iconv-lite": "0.6.3",
     "lodash.debounce": "^4.0.8",
     "lodash.shuffle": "^4.2.0",
+    "mkdirp": "^1.0.4",
     "postprocessing": "^6.23.1",
     "preact": "^10.5.15",
     "react-error-boundary": "^3.1.3",
@@ -85,6 +87,9 @@
     "@types/concat-stream": "^1.6.1",
     "@types/d3-ease": "^3.0.0",
     "@types/lodash.shuffle": "^4.2.6",
+    "@types/mkdirp": "^1.0.2",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
     "@types/three": "^0.133.1",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
