--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -54,6 +54,7 @@
     ]
   },
   "dependencies": {
+    "assert": "^2.0.0",
     "bl": "^5.0.0",
     "bw-chk": "^1.3.0",
     "byte-size": "^8.1.0",
@@ -61,6 +62,7 @@
     "casclib": "^2.0.1",
     "concat": "1.0.3",
     "d3-ease": "1.0.6",
+    "decode-dxt": "^1.0.1",
     "downgrade-replay": "^0.0.4",
     "electron-devtools-installer": "^3.2.0",
     "electron-is-dev": "^1.2.0",
