--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -46,12 +46,10 @@
     "mac": {
       "category": "3D Map & Replay Viewer for Starcraft Broodwar"
     },
-    "extraResources": [
-      {
-        "from": "static",
-        "to": "static"
-      }
-    ]
+    "extraResources": [{
+      "from": "static",
+      "to": "static"
+    }]
   },
   "dependencies": {
     "assert": "^2.0.0",
