--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -62,11 +62,11 @@
     "casclib": "^2.0.1",
     "concat": "1.0.3",
     "d3-ease": "1.0.6",
-    "decode-dxt": "^1.0.1",
     "downgrade-replay": "^0.0.4",
     "electron-devtools-installer": "^3.2.0",
     "electron-is-dev": "^1.2.0",
     "iconv-lite": "0.6.3",
+    "js-yaml": "^4.1.0",
     "lodash.debounce": "^4.0.8",
     "lodash.shuffle": "^4.2.0",
     "mkdirp": "^1.0.4",
@@ -90,6 +90,7 @@
     "@types/concat-stream": "^1.6.1",
     "@types/d3-ease": "^3.0.0",
     "@types/jest": "^27.0.3",
+    "@types/js-yaml": "^4.0.5",
     "@types/lodash.shuffle": "^4.2.6",
     "@types/mkdirp": "^1.0.2",
     "@types/react": "^17.0.37",
@@ -99,7 +100,6 @@
     "@typescript-eslint/parser": "^5.1.0",
     "babel-jest": "^26.3.0",
     "babel-loader": "^8.2.2",
-    "benchmark": "^2.1.4",
     "benny": "^3.7.1",
     "dotenv": "^8.2.0",
     "electron": "15.1.1",
@@ -119,7 +119,6 @@
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19",
     "typescript": "^4.4.4",
-    "webpack-bundle-analyzer": "^4.5.0",
     "worker-loader": "^2.0.0"
   }
 }
