--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -9,8 +9,8 @@
     "test:once": "jest --runInBand",
     "test:debug": "node --inspect node_modules/jest/bin/jest --runInBand",
     "clear-cache": "rm -rf .cache dist",
-    "compile": "electron-webpack",
-    "dist": "yarn compile && electron-builder",
+    "build": "electron-webpack",
+    "dist": "yarn build && electron-builder",
     "dist:dir": "yarn dist -- --dir -c.compression=store -c.mac.identity=null",
     "dev": "electron-webpack dev",
     "dist:run": "yarn compile && electron dist/main/main.js",
@@ -46,12 +46,10 @@
     "mac": {
       "category": "3D Map & Replay Viewer for Starcraft Broodwar"
     },
-    "extraResources": [
-      {
-        "from": "static",
-        "to": "static"
-      }
-    ]
+    "extraResources": [{
+      "from": "static",
+      "to": "static"
+    }]
   },
   "dependencies": {
     "assert": "^2.0.0",
