--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,9 +32,30 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 16
+          
       - name: Install Yarn
         run: npm install -g yarn@1.22.4
+        
       - name: Install Packages
         run: yarn workspace titan-reactor install
+        
       - name: Build Titan Reactor TS application / Electorn
         run: yarn workspace titan-reactor dist
+        
+      - name: Zip Assets
+        uses: papeloto/action-zip@v1
+        with:
+          files: packages/titan-reactor/dist/win-unpacked
+          dest: titan-reactor.zip
+          
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+          files: titan-reactor.zip
