--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,7 +45,7 @@ jobs:
         run: yarn workspace titan-reactor dist
         
       - name: Zip Assets
-        uses: papeloto/action-zip@v1
+        uses: vimtor/action-zip@v1
         with:
           files: packages/titan-reactor/dist/win-unpacked
           dest: titan-reactor.zip
