replace create-release w action-gh-release

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -52,14 +52,7 @@ jobs:
           files: packages/titan-reactor/dist/win-unpacked
           dest: titan-reactor.zip
           
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Release
+        uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
           files: titan-reactor.zip
