add prerelease option to release-action

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -63,3 +63,4 @@ jobs:
           artifacts: "titan-reactor.zip"
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ steps.tag.outputs.release_tag }}
+          prerelease: true
