--- a/packages/downgrade-replay/package.json
+++ b/packages/downgrade-replay/package.json
@@ -7,10 +7,9 @@
   "license": "MIT",
   "dependencies": {
     "bl": "^5.0.0",
-    "casclib": "^1.0.4",
+    "downgrade-replay-tile-matches": "^0.0.1",
     "iconv-lite": "^0.6.2",
-    "pkware-wasm": "^1.0.0",
-    "downgrade-replay-tile-matches": "^0.0.1"
+    "pkware-wasm": "^1.0.0"
   },
   "devDependencies": {
     "bw-chk": "^1.2.1",
