--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -14,7 +14,8 @@
     "dist:dir": "yarn dist -- --dir -c.compression=store -c.mac.identity=null",
     "dev": "electron-webpack dev",
     "dist:run": "yarn build && electron dist/main/main.js",
-    "lint": "yarn eslint ."
+    "lint": "yarn eslint .",
+    "clean-dev-win": "taskkill /f /im node.exe"
   },
   "browserslist": [
     "last 2 Chrome versions"
@@ -46,16 +47,18 @@
     "mac": {
       "category": "3D Map & Replay Viewer for Starcraft Broodwar"
     },
-    "extraResources": [{
-      "from": "static",
-      "to": "static"
-    }]
+    "extraResources": [
+      {
+        "from": "static",
+        "to": "static"
+      }
+    ]
   },
   "dependencies": {
     "assert": "^2.0.0",
     "bl": "^5.0.0",
-    "bw-chk": "^1.3.0",
     "bw-casclib": "^2.0.0",
+    "bw-chk": "^1.3.0",
     "byte-size": "^8.1.0",
     "camera-controls": "^1.25.3",
     "concat": "1.0.3",
