--- a/packages/titan-reactor/tsconfig.json
+++ b/packages/titan-reactor/tsconfig.json
@@ -29,7 +29,8 @@
       "react": ["preact/compat"]
     },
     "typeRoots": ["./src/common/types/declarations", "./node_modules/@types"],
-    "outDir": "generated"
+    "outDir": "generated",
+    "resolveJsonModule": true
   },
   // "include": ["src/**/*"],
   "exclude": ["./node_modules/**/*", "generated"]
