--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -47,10 +47,12 @@
     "mac": {
       "category": "3D Map & Replay Viewer for Starcraft Broodwar"
     },
-    "extraResources": [{
-      "from": "static",
-      "to": "static"
-    }]
+    "extraResources": [
+      {
+        "from": "static",
+        "to": "static"
+      }
+    ]
   },
   "dependencies": {
     "assert": "^2.0.0",
@@ -69,11 +71,11 @@
     "lodash.debounce": "^4.0.8",
     "lodash.shuffle": "^4.2.0",
     "mkdirp": "^1.0.4",
-    "postprocessing": "^6.23.1",
+    "postprocessing": "6.23.5",
     "preact": "^10.5.15",
     "react-error-boundary": "^3.1.3",
     "scm-extractor": "^1.0.6",
-    "three": "0.137.0",
+    "three": "0.134.0",
     "webpack": "4.42.1",
     "winreg": "^1.2.4",
     "zustand": "3.3.3"
@@ -113,8 +115,10 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "glslify-loader": "^2.0.0",
     "jest": "^27.2.4",
     "prettier": "^2.4.1",
+    "raw-loader": "^4.0.2",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19",
     "typescript": "^4.4.4",
