--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -47,12 +47,10 @@
     "mac": {
       "category": "3D Map & Replay Viewer for Starcraft Broodwar"
     },
-    "extraResources": [
-      {
-        "from": "static",
-        "to": "static"
-      }
-    ]
+    "extraResources": [{
+      "from": "static",
+      "to": "static"
+    }]
   },
   "dependencies": {
     "assert": "^2.0.0",
@@ -63,7 +61,7 @@
     "camera-controls": "^1.25.3",
     "concat": "1.0.3",
     "d3-ease": "1.0.6",
-    "downgrade-replay": "^0.0.6",
+    "downgrade-replay": "^0.0.7",
     "electron-devtools-installer": "^3.2.0",
     "electron-is-dev": "^1.2.0",
     "iconv-lite": "0.6.3",
