--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -47,10 +47,12 @@
     "mac": {
       "category": "3D Map & Replay Viewer for Starcraft Broodwar"
     },
-    "extraResources": [{
-      "from": "static",
-      "to": "static"
-    }]
+    "extraResources": [
+      {
+        "from": "static",
+        "to": "static"
+      }
+    ]
   },
   "dependencies": {
     "assert": "^2.0.0",
@@ -70,10 +72,12 @@
     "lodash.shuffle": "^4.2.0",
     "mkdirp": "^1.0.4",
     "postprocessing": "6.24.0",
-    "preact": "^10.5.15",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.3",
     "scm-extractor": "^1.0.6",
     "three": "0.137.0",
+    "valtio": "^1.3.0",
     "webpack": "4.42.1",
     "winreg": "^1.2.4",
     "zustand": "3.3.3"
