plugin layout manager

--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -68,6 +68,8 @@
     "electron-is-dev": "^1.2.0",
     "iconv-lite": "0.6.3",
     "lodash.debounce": "^4.0.8",
+    "lodash.get": "^4.4.2",
+    "lodash.groupby": "^4.6.0",
     "lodash.shuffle": "^4.2.0",
     "mkdirp": "^1.0.4",
     "node-static": "^0.7.11",
@@ -94,6 +96,8 @@
     "@types/d3-ease": "^3.0.0",
     "@types/jest": "^27.0.3",
     "@types/js-yaml": "^4.0.5",
+    "@types/lodash.get": "^4.4.6",
+    "@types/lodash.groupby": "^4.6.6",
     "@types/lodash.shuffle": "^4.2.6",
     "@types/mkdirp": "^1.0.2",
     "@types/react": "^17.0.37",
