--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -96,6 +96,7 @@
     "@types/d3-ease": "^3.0.0",
     "@types/jest": "^27.0.3",
     "@types/js-yaml": "^4.0.5",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.get": "^4.4.6",
     "@types/lodash.groupby": "^4.6.6",
     "@types/lodash.shuffle": "^4.2.6",
