--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -8,7 +8,7 @@
     "test": "jest --watchAll",
     "test:once": "jest --runInBand",
     "test:debug": "node --inspect node_modules/jest/bin/jest --runInBand",
-    "clear-cache": "rm -rf .cache dist",
+    "clear-cache": "rimraf .cache dist",
     "build": "electron-webpack",
     "dist": "yarn build && electron-builder",
     "dist:dir": "yarn dist -- --dir -c.compression=store -c.mac.identity=null",
@@ -32,6 +32,7 @@
   "homepage": "https://github.com/imbateam-gg/titan-reactor#readme",
   "electronWebpack": {
     "commonSourceDirectory": "src/common",
+    "staticSourceDirectory": "bundled",
     "title": "Titan Reactor",
     "main": {
       "sourceDirectory": "src/main"
@@ -39,7 +40,8 @@
     "renderer": {
       "sourceDirectory": "src/renderer",
       "webpackConfig": "build/renderer.config.js"
-    }
+    },
+    "whiteListedModules": ["zustand"]
   },
   "build": {
     "appId": "imbateam.titan-reactor",
@@ -47,12 +49,10 @@
     "mac": {
       "category": "3D Map & Replay Viewer for Starcraft Broodwar"
     },
-    "extraResources": [
-      {
-        "from": "static",
-        "to": "static"
-      }
-    ]
+    "extraResources": [{
+      "from": "bundled",
+      "to": "bundled"
+    }]
   },
   "dependencies": {
     "assert": "^2.0.0",
@@ -127,6 +127,7 @@
     "prettier": "^2.4.1",
     "raw-loader": "^4.0.2",
     "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
     "source-map-support": "^0.5.19",
     "typescript": "^4.4.4",
     "worker-loader": "^2.0.0"
