--- a/packages/titan-reactor/tsconfig.json
+++ b/packages/titan-reactor/tsconfig.json
@@ -4,34 +4,35 @@
     "module": "esnext",
     "moduleResolution": "node",
     "noImplicitOverride": true,
-    "strict": true,
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "jsx": "react-jsx",
-    "noImplicitAny": true,
 
+    "strict": true,
     "checkJs": false,
     "preserveConstEnums": true,
-    "skipLibCheck": true,
-    "strictNullChecks": true,
+    "skipLibCheck": false,
     "isolatedModules": false,
     "strictPropertyInitialization": true,
 
+    "noUnusedLocals": true,
+    "noUnusedParameters": false,
+
     "inlineSources": false,
     "sourceMap": true,
-    "baseUrl": ".",
+    "baseUrl": "src",
     "paths": {
-      "common": ["src/common/*"],
-      "ipc/*": ["src/renderer/ipc/*"],
-      "ipc": ["src/renderer/ipc/index.ts"]
+      "common": ["common/*"],
+      "ipc/*": ["renderer/ipc/*"],
+      "ipc": ["renderer/ipc/index.ts"]
     },
     "typeRoots": ["./src/common/types/declarations", "./node_modules/@types"],
     "outDir": "generated",
     "resolveJsonModule": true
   },
-  // "include": ["src/**/*"],
+  "include": ["src/**/*"],
   "exclude": ["./node_modules/**/*", "generated"]
 }
