--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -90,6 +90,7 @@
     "valtio": "^1.3.0",
     "webpack": "4.42.1",
     "winreg": "^1.2.4",
+    "xss": "^1.0.10",
     "zustand": "3.3.3"
   },
   "devDependencies": {
