--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -69,6 +69,7 @@
     "camera-controls": "^1.33.2",
     "concat": "1.0.3",
     "d3-ease": "1.0.6",
+    "dompurify": "^2.3.6",
     "downgrade-replay": "^0.0.7",
     "electron-devtools-installer": "^3.2.0",
     "electron-is-dev": "^1.2.0",
@@ -90,7 +91,6 @@
     "valtio": "^1.3.0",
     "webpack": "4.42.1",
     "winreg": "^1.2.4",
-    "xss": "^1.0.10",
     "zustand": "3.3.3"
   },
   "devDependencies": {
@@ -103,6 +103,7 @@
     "@types/bl": "^5.0.2",
     "@types/concat-stream": "^1.6.1",
     "@types/d3-ease": "^3.0.0",
+    "@types/dompurify": "^2.3.3",
     "@types/jest": "^27.0.3",
     "@types/js-yaml": "^4.0.5",
     "@types/lodash.debounce": "^4.0.6",
