--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -1,8 +1,8 @@
 {
   "name": "titan-reactor",
   "productName": "Titan Reactor",
-  "version": "0.4.1",
-  "description": "3D Map & Replay Viewer for Starcraft Broodwar",
+  "version": "0.4.3",
+  "description": "The Advanced Starcraft Broodwar Observing Tool",
   "main": "src/main/index.js",
   "scripts": {
     "test": "jest --watchAll",
@@ -69,6 +69,7 @@
     "camera-controls": "^1.33.2",
     "concat": "1.0.3",
     "d3-ease": "1.0.6",
+    "deepmerge": "^4.2.2",
     "dompurify": "^2.3.6",
     "downgrade-replay": "^0.0.7",
     "electron-devtools-installer": "^3.2.0",
@@ -84,11 +85,9 @@
     "postprocessing": "6.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-error-boundary": "^3.1.3",
     "react-jsx-parser": "^1.29.0",
     "scm-extractor": "^1.0.6",
     "three": "0.137.0",
-    "valtio": "^1.3.0",
     "webpack": "4.42.1",
     "winreg": "^1.2.4",
     "zustand": "3.3.3"
