--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -63,10 +63,12 @@
     "@stitches/react": "^1.2.6",
     "assert": "^2.0.0",
     "bl": "^5.0.0",
+    "buble": "^0.20.0",
     "bw-casclib": "^2.0.0",
     "bw-chk": "^1.3.0",
     "byte-size": "^8.1.0",
     "camera-controls": "^1.33.2",
+    "cheerio": "^1.0.0-rc.10",
     "concat": "1.0.3",
     "d3-ease": "1.0.6",
     "deepmerge": "^4.2.2",
