--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -76,6 +76,7 @@
     "downgrade-replay": "^0.0.7",
     "electron-devtools-installer": "^3.2.0",
     "electron-is-dev": "^1.2.0",
+    "express": "^4.17.3",
     "iconv-lite": "0.6.3",
     "leva": "^0.9.23",
     "lodash.debounce": "^4.0.8",
@@ -83,7 +84,6 @@
     "lodash.groupby": "^4.6.0",
     "lodash.shuffle": "^4.2.0",
     "mkdirp": "^1.0.4",
-    "node-static": "^0.7.11",
     "postprocessing": "6.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -102,9 +102,11 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@types/bl": "^5.0.2",
+    "@types/buble": "^0.20.1",
     "@types/concat-stream": "^1.6.1",
     "@types/d3-ease": "^3.0.0",
     "@types/dompurify": "^2.3.3",
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
     "@types/js-yaml": "^4.0.5",
     "@types/lodash.debounce": "^4.0.6",
