integrate reset.css into runtime

--- a/packages/titan-reactor/bundled/plugins/clock/userConfig.json
+++ b/packages/titan-reactor/bundled/plugins/clock/userConfig.json
@@ -1,9 +1,12 @@
 {
     "style": {
-        "value": "classic",
+        "value": "modern",
         "options": ["classic", "modern"]
     },
     "fontSize": {
         "value": "16px"
+    },
+    "textColor": {
+        "value": "rgb(203 213 225)"
     }
 }
