separate plugin runtime directory

--- a/packages/titan-reactor/bundled/plugins/clock/userConfig.json
+++ b/packages/titan-reactor/bundled/plugins/clock/userConfig.json
@@ -7,6 +7,6 @@
         "value": "16px"
     },
     "textColor": {
-        "value": "rgb(203 213 225)"
+        "value": "rgb(203, 213, 225)"
     }
 }
