--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -1,7 +1,7 @@
 {
   "name": "titan-reactor",
   "productName": "Titan Reactor",
-  "version": "0.4.3",
+  "version": "0.4.4",
   "description": "The Advanced Starcraft Broodwar Observing Tool",
   "main": "src/main/index.js",
   "scripts": {
@@ -24,8 +24,8 @@
     "type": "git",
     "url": "git+https://github.com/imbateam-gg/titan-reactor.git"
   },
-  "author": "",
-  "license": "MIT",
+  "author": "Alex Pineda <alexpineda@fastmail.com>",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/imbateam-gg/titan-reactor/issues"
   },
@@ -52,12 +52,10 @@
     "mac": {
       "category": "The Advanced Observing App"
     },
-    "extraResources": [
-      {
-        "from": "bundled",
-        "to": "bundled"
-      }
-    ]
+    "extraResources": [{
+      "from": "bundled",
+      "to": "bundled"
+    }]
   },
   "dependencies": {
     "@npmcli/package-json": "^1.0.1",
@@ -84,10 +82,12 @@
     "lodash.shuffle": "^4.2.0",
     "mkdirp": "^1.0.4",
     "muicss": "^0.10.3",
+    "pacote": "^13.0.3",
     "postprocessing": "6.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-jsx-parser": "^1.29.0",
+    "sanitize-filename": "^1.6.3",
     "scm-extractor": "^1.0.6",
     "three": "0.137.0",
     "webpack": "4.42.1",
@@ -116,6 +116,7 @@
     "@types/lodash.shuffle": "^4.2.6",
     "@types/mkdirp": "^1.0.2",
     "@types/muicss": "^0.9.4",
+    "@types/pacote": "^11.1.3",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/three": "^0.133.1",
