--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -52,10 +52,12 @@
     "mac": {
       "category": "The Advanced Observing App"
     },
-    "extraResources": [{
-      "from": "bundled",
-      "to": "bundled"
-    }]
+    "extraResources": [
+      {
+        "from": "bundled",
+        "to": "bundled"
+      }
+    ]
   },
   "dependencies": {
     "@npmcli/package-json": "^1.0.1",
@@ -87,6 +89,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-jsx-parser": "^1.29.0",
+    "react-markdown": "^8.0.0",
     "sanitize-filename": "^1.6.3",
     "scm-extractor": "^1.0.6",
     "three": "0.137.0",
