--- a/packages/titan-reactor/package.json
+++ b/packages/titan-reactor/package.json
@@ -92,6 +92,7 @@
     "react-markdown": "^8.0.0",
     "sanitize-filename": "^1.6.3",
     "scm-extractor": "^1.0.6",
+    "semver": "^7.3.5",
     "three": "0.137.0",
     "webpack": "4.42.1",
     "winreg": "^1.2.4",
@@ -122,6 +123,7 @@
     "@types/pacote": "^11.1.3",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/semver": "^7.3.9",
     "@types/three": "^0.133.1",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
