--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
         "lint": "yarn eslint .",
         "clean-dev-win": "taskkill /f /im node.exe",
         "postinstall": "git apply -v --stat --directory=node_modules/scm-extractor build/patches/scm-extractor.patch"
-
     },
     "browserslist": [
         "last 2 Chrome versions"
@@ -54,10 +53,12 @@
         "mac": {
             "category": "The Advanced Observing App"
         },
-        "extraResources": [{
-            "from": "bundled",
-            "to": "bundled"
-        }]
+        "extraResources": [
+            {
+                "from": "bundled",
+                "to": "bundled"
+            }
+        ]
     },
     "dependencies": {
         "@npmcli/package-json": "^1.0.1",
@@ -106,6 +107,7 @@
         "@babel/preset-env": "^7.11.5",
         "@babel/preset-react": "^7.14.5",
         "@babel/preset-typescript": "^7.15.0",
+        "@types/babel__core": "^7.1.18",
         "@types/bl": "^5.0.2",
         "@types/buble": "^0.20.1",
         "@types/concat-stream": "^1.6.1",
