--- a/package.json
+++ b/package.json
@@ -72,9 +72,9 @@
         "byte-size": "^8.1.0",
         "camera-controls": "^1.33.2",
         "concat": "1.0.3",
+        "concat-stream": "^2.0.0",
         "d3-ease": "1.0.6",
         "deepmerge": "^4.2.2",
-        "downgrade-replay": "0.0.9",
         "electron-devtools-installer": "^3.2.0",
         "electron-is-dev": "^1.2.0",
         "express": "^4.17.3",
@@ -88,6 +88,7 @@
         "mkdirp": "^1.0.4",
         "muicss": "^0.10.3",
         "pacote": "^13.0.3",
+        "pkware-wasm": "^1.0.0",
         "postprocessing": "6.24.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -109,7 +110,7 @@
         "@types/babel__core": "^7.1.18",
         "@types/bl": "^5.0.2",
         "@types/buble": "^0.20.1",
-        "@types/concat-stream": "^1.6.1",
+        "@types/concat-stream": "^2.0.0",
         "@types/d3-ease": "^3.0.0",
         "@types/dompurify": "^2.3.3",
         "@types/express": "^4.17.13",
