keyboard shortcut leva plugin

--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
         "lodash.debounce": "^4.0.8",
         "lodash.get": "^4.4.2",
         "lodash.groupby": "^4.6.0",
+        "lodash.omit": "^4.5.0",
         "lodash.shuffle": "^4.2.0",
         "mkdirp": "^1.0.4",
         "muicss": "^0.10.3",
@@ -120,6 +121,7 @@
         "@types/lodash.debounce": "^4.0.6",
         "@types/lodash.get": "^4.4.6",
         "@types/lodash.groupby": "^4.6.6",
+        "@types/lodash.omit": "^4.5.6",
         "@types/lodash.shuffle": "^4.2.6",
         "@types/mkdirp": "^1.0.2",
         "@types/muicss": "^0.9.4",
