--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
         "scm-extractor": "^1.0.6",
         "semver": "^7.3.5",
         "three": "0.137.0",
+        "three-stdlib": "^2.9.1",
         "webpack": "4.42.1",
         "winreg": "^1.2.4",
         "zustand": "3.3.3"
